final-appのプロトタイプ作成、1st-appと共存できるよう構成変更

--- a/Vagrantfiles/1st-app/Vagrantfile
+++ b/Vagrantfiles/1st-app/Vagrantfile
@@ -10,10 +10,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 	config.vm.network :forwarded_port, guest: 8080, host: 28080 # http
 	config.vm.network :forwarded_port, guest: 8180, host: 28180 # jenkins
 
-	config.vm.synced_folder "../src", "/var/src", :create => true, :owner => 'vagrant', :group => 'vagrant', :mount_options => ['dmode=777', 'fmode=666']
+	config.vm.synced_folder "../../src", "/var/src", :create => true, :owner => 'vagrant', :group => 'vagrant', :mount_options => ['dmode=777', 'fmode=666']
 
 	config.vm.provision "chef_solo" do |chef|
-		chef.cookbooks_path = "../chef/site-cookbooks/"
+		chef.cookbooks_path = "../../chef/site-cookbooks/"
 		chef.run_list = %w[
 			recipe[java]
 			recipe[java::maven]
