--- a/src/final-app/package.json
+++ b/src/final-app/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^4.0.6",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
-    "socket.io": "~0.9.6"
+    "socket.io": "^1.3.5",
+    "socket.io-redis": "^0.1.4"
   }
 }
