--- a/Vagrantfiles/final-app/Vagrantfile
+++ b/Vagrantfiles/final-app/Vagrantfile
@@ -25,4 +25,25 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 		]
 	end
 
+	# for bug of Vagrant 1.7.2
+	unless Vagrant.has_plugin?('vagrant-triggers')
+		# Attempt to install ourself.
+		# Bail out on failure so we don't get stuck in an infinite loop.
+		system('vagrant plugin install vagrant-triggers') || exit!
+
+		# Relaunch Vagrant so the new plugin(s) are detected.
+		# Exit with the same status code.
+		exit system('vagrant', *ARGV)
+	end
+
+	config.trigger.before [:reload, :up], stdout: true do
+		my_SYNCED_FOLDER = ".vagrant/machines/default/virtualbox/synced_folders"
+		info "Trying to delete folder #{my_SYNCED_FOLDER}"
+		begin
+			File.delete(my_SYNCED_FOLDER)
+		rescue StandardError => e
+			warn "Could not delete folder #{my_SYNCED_FOLDER}."
+			warn e.inspect
+		end
+	end
 end
