--- a/Vagrantfiles/final-app/Vagrantfile
+++ b/Vagrantfiles/final-app/Vagrantfile
@@ -2,7 +2,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-	config.vm.box = "workshop_FY15"
+	config.vm.box = "CentOS_6.5.3_Minimal"
 	config.vm.box_url = "https://github.com/2creatives/vagrant-centos/releases/download/v6.5.3/centos65-x86_64-20140116.box"
 	config.omnibus.chef_version = :latest
 
